# cadetgui

./: JUPYTER_SETUP.md  README.md  ROADMAP.md  dev_excel_interface.ipynb  dev_excel_interface.py  dev_excel_interface_new.py  dev_gui.py  dev_gui.py.bakk  environment.yml  exp.h5  experiment_1  launcher.py  pyproject.toml  requirements.txt  test.pkl  tinker.py
cadet_simplified/: README.md  __init__.py  app.py  dev_gui.py  requirements.txt  run_app.py  test_basic.py
cadet_simplified/analysis/: __init__.py  analyses.py  plotting.py  view.py
cadet_simplified/configs/: __init__.py  loader.py
cadet_simplified/configs/binding_models/: BiLangmuir.json  GeneralRateModel.json  GeneralizedIonExchange.json  Langmuir.json  Linear.json  LumpedRateModelWithPores.json  LumpedRateModelWithoutPores.json  StericMassAction.json
cadet_simplified/configs/column_models/: GeneralRateModel.json  LumpedRateModelWithPores.json  LumpedRateModelWithoutPores.json
cadet_simplified/core/: __init__.py  dataclasses.py
cadet_simplified/excel/: __init__.py  parser.py  template_generator.py
cadet_simplified/operation_modes/: __init__.py  base.py  lwe.py  parameter_introspection.py
cadet_simplified/optimization/: __init__.py  fittable_parameters.py  fitting_problem.py  fitting_result.py  fitting_runner.py  fitting_storage.py  reference_data.py  reference_parser.py
cadet_simplified/plotting/: __init__.py  chromatogram.py  interactive.py
cadet_simplified/results/: __init__.py  analyzer.py
cadet_simplified/simulation/: __init__.py  runner.py
cadet_simplified/storage/: __init__.py  experiment_store.py  file_storage.py  interfaces.py
cadet_simplified/tests/: conftest.py  pytest.ini  test_file_storage.py  test_integration_cadet.py  test_results_analyzer.py  test_results_exporter.py
cadet_simplified/utils/: path_utils.py
experiments/: 92fd8e9dfb51.json
experiments/a44739a1414a/: config.json
experiments/a44739a1414a/results/: experiment_1.pkl
experiments/e741da90df63/: config.json
experiments/e741da90df63/results/: experiment_1.pkl
